create customer model listing

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
 
 
 <header class="header" data-id="#header">
-  <button class="header__burger"></button>
+  <button class="header__burger" (click)="toggleSidebar()"></button>
   <button class="header__search">
     <svg class="icon icon-search">
       <use xlink:href="#icon-search"></use>
