--- a/src/app/Components/Customers/add/add.component.html
+++ b/src/app/Components/Customers/add/add.component.html
@@ -1,3 +1,7 @@
+@if(loading$){
+  <div class="topbar-progress"></div>
+  }
+
 <div class="page__inner">
   <div class="page__container">
     <div class="create">
