--- a/src/app/Components/Customers/listing/listing.component.html
+++ b/src/app/Components/Customers/listing/listing.component.html
@@ -20,7 +20,7 @@
         </form>
         <button routerLink="/customers/add" class="button filters__button">
           <svg class="icon icon-add">
-            <use xlink:href="#icon-add"></use>
+            <use xlink:href="#icon-plus"></use>
           </svg><span>Create</span></button>
       </div>
       <div class="card">
