--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -5,8 +5,8 @@
 <div class="page page_simple">
   <div class="entry">
     <div class="entry__wrapper">
-      <a class="entry__logo" routerLink="#"><img class="some-icon" src="../../../assets/img/logo-dark.png"
-          alt="Core"><img class="some-icon-dark" src="../../../assets/img/logo-light.png" alt="Core"></a>
+      <a class="entry__logo" routerLink="#"><img class="some-icon" src="../../../assets/img/content/avatar.jpg"
+          alt="Core"><img class="some-icon-dark" src="../../../assets/img/content/avatar.jpg" alt="Core"></a>
       <div class="h2 entry__title">Sign in</div>
       <div class="entry__fieldset">
         <form [formGroup]="loginform" (ngSubmit)="signIn()">
