--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,7 +13,7 @@
   <div class="header__control">
 
     <!-- Message -->
-    <div class="header__item header__item_messages" [class.active]="_messagesActive">
+    <!-- <div class="header__item header__item_messages" [class.active]="_messagesActive">
       <button class="header__head active" (click)="toggleMessages()">
         <svg class="icon icon-message">
           <use xlink:href="#icon-message"></use>
@@ -38,10 +38,10 @@
         </div>
         <a class="button header__button" href="message-center.html">View in message center</a>
       </div>
-    </div>
+    </div> -->
 
     <!-- Notification -->
-    <div class="header__item header__item_notifications" [class.active]="_notificationActive">
+    <!-- <div class="header__item header__item_notifications" [class.active]="_notificationActive">
       <button class="header__head active" (click)="toggleNotification()">
         <svg class="icon icon-notification">
           <use xlink:href="#icon-notification"></use>
@@ -72,12 +72,12 @@
 
         <a class="button header__button" href="notification.html">See all notifications</a>
       </div>
-    </div>
+    </div> -->
 
     <div class="header__item header__item_user" [class.active]="_showProfile">
       <button class="header__head" (click)="toggleProfile()">
         <img src="../../../assets/img/content/avatar.jpg" alt="Avatar" />
-      </button>
+      </button> 
       <div class="header__body">
         <div class="header__nav">
           <a class="header__link">Account settings</a>
