--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -4,15 +4,8 @@
       <use xlink:href="#icon-close"></use>
     </svg>
   </button>
-  <a class="sidebar__logo" routerLink=""
-    ><img
-      class="some-icon"
-      src="../../../assets/img/logo-dark.png"
-      alt="Core" /><img
-      class="some-icon-dark"
-      src="../../../assets/img/logo-light.png"
-      alt="Core"
-  /></a>
+  <a class="sidebar__logo" routerLink=""><img class="some-icon" src="../../../assets/img/content/avatar.jpg"
+      alt="Core" /><img class="some-icon-dark" src="../../../assets/img/content/avatar.jpg" alt="Core" /></a>
 
   <div class="sidebar__menu">
     <a class="sidebar__item active" routerLink="/dashboard">
@@ -27,6 +20,20 @@
         <use xlink:href="#icon-profile-circle"></use>
       </svg>
       Customers
+    </a>
+
+    <a class="sidebar__item" routerLink="/customers">
+      <svg class="icon icon-ticket">
+        <use xlink:href="#icon-ticket"></use>
+      </svg>
+      Booking
+    </a>
+
+    <a class="sidebar__item" routerLink="/customers">
+      <svg class="icon icon-invoice">
+        <use xlink:href="#icon-invoice"></use>
+      </svg>
+      Invoices
     </a>
 
     <!-- <div
