--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import 'ngx-toastr/toastr';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
 
 .table-responsive {
   max-height: 600px;
