--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -15,21 +15,21 @@
       Dashboard
     </a>
 
-    <a class="sidebar__item" routerLink="/customers">
+    <a class="sidebar__item" routerLink="/customers" (click)="closeSidebar()">
       <svg class="icon icon-diamond">
         <use xlink:href="#icon-profile-circle"></use>
       </svg>
       Customers
     </a>
 
-    <a class="sidebar__item" routerLink="/customers">
+    <a class="sidebar__item" routerLink="/booking" (click)="closeSidebar()" >
       <svg class="icon icon-ticket">
         <use xlink:href="#icon-ticket"></use>
       </svg>
       Booking
     </a>
 
-    <a class="sidebar__item" routerLink="/customers">
+    <a class="sidebar__item" routerLink="/booking" (click)="closeSidebar()" >
       <svg class="icon icon-invoice">
         <use xlink:href="#icon-invoice"></use>
       </svg>
