--- a/src/app/Components/Customers/add/add.component.html
+++ b/src/app/Components/Customers/add/add.component.html
@@ -80,19 +80,6 @@
             </div>
           </div>
 
-          <div class="field fieldmargin">
-            <div class="field__label">Car Service</div>
-            <div class="field__wrap">
-              <select class="select">
-                <option>Select 1</option>
-                <option>Select 2</option>
-                <option>Select 3</option>
-                <option>Select 4</option>
-              </select>
-            </div>
-          </div>
-
-
           <div class="filters__btns">
             <a class="button-stroke panel__button  answer__button" routerLink="/customers">Cancel</a>
             @if(!_btnLoading){
@@ -103,7 +90,7 @@
 
             @if(_btnLoading){
             <button class="button panel__button">
-              Creating... <i class="fa fa-refresh fa-spin"></i>
+              Please wait... <i class="fa fa-refresh fa-spin"></i>
             </button>
             }
           </div>
