--- a/src/app/Components/Customers/listing/listing.component.html
+++ b/src/app/Components/Customers/listing/listing.component.html
@@ -32,11 +32,6 @@
                 <div class="payout__col">Customber Name</div>
                 <div class="payout__col">Mobail Number</div>
                 <div class="payout__col">Email</div>
-                <div class="payout__col">City</div>
-                <!-- <div class="payout__col">Brand Name</div> -->
-                <!-- <div class="payout__col">Model name</div> -->
-                <!-- <div class="payout__col">Car Service</div> -->
-                <!-- <div class="payout__col">Full Address</div> -->
                 <div class="payout__col">Date</div>
                 <div class="payout__col">Action</div>
               </div>
@@ -46,32 +41,27 @@
                 <div class="payout__col">{{item.customerName}}</div>
                 <div class="payout__col">{{item.mobileNumber}}</div>
                 <div class="payout__col">{{item.email}}</div>
-                <div class="payout__col">{{item.city}}</div>
-                <!-- <div class="payout__col">{{item.brandName}}</div> -->
-                <!-- <div class="payout__col">{{item.modelName}}</div> -->
-                <!-- <div class="payout__col">{{item.carService}}</div> -->
-                <!-- <div class="payout__col">{{item.fullAddress}}</div> -->
                 <div class="payout__col">{{item.createdAt}}</div>
                 <div class="payout__col">
-                  <div class="actions" [class.active]="_actionsVisibility[$index]">
+                  <!-- <div class="actions" [class.active]="_actionsVisibility[$index]">
                     <button class="actions__button" (click)="toggleActionsVisibility($index)">
                       <svg class="icon icon-more-horizontal">
                         <use xlink:href="#icon-more-horizontal"></use>
                       </svg>
+                    </button> -->
+                  <div class="action-buttons">
+                    <button class="actionsBtn" (click)="navigateToRoute(item)">
+                      <svg class="icon icon-edit">
+                        <use xlink:href="#icon-edit"></use>
+                      </svg>
                     </button>
-                    <div class="actions__body">
-                      <button class="actions__option" (click)="navigateToRoute(item)">
-                        <svg class="icon icon-edit">
-                          <use xlink:href="#icon-edit"></use>
-                        </svg>Edit Customer
-                      </button>
-                      <button class="actions__option" (click)="toggleDeleteDialog(item)">
-                        <svg class="icon icon-trash">
-                          <use xlink:href="#icon-trash"></use>
-                        </svg>Delete Customer
-                      </button>
-                    </div>
+                    <button class="actionsBtn" (click)="toggleDeleteDialog(item)">
+                      <svg class="icon icon-trash">
+                        <use xlink:href="#icon-trash"></use>
+                      </svg>
+                    </button>
                   </div>
+                  <!-- </div> -->
                 </div>
               </div>
               } @empty{
@@ -91,6 +81,6 @@
     </div>
   </div>
 
-  
-<!-- delete dialog -->
-<app-delete-dialog [addclass]="_showDeleteDialog" (toggleDeleteDialog)="toggleDeleteDialog(0)" (delete)="delete()" />
+
+  <!-- delete dialog -->
+  <app-delete-dialog [addclass]="_showDeleteDialog" (toggleDeleteDialog)="toggleDeleteDialog(0)" (delete)="delete()" />
