--- a/src/app/Components/booking-car/listing/listing.component.html
+++ b/src/app/Components/booking-car/listing/listing.component.html
@@ -9,7 +9,7 @@
             <div class="card__head">
                 <div class="title-purple card__title">{{_pageTitle}}</div>
                 <form class="form">
-                    <input class="form__input" type="date" name="search" [(value)]="_searchTerm"
+                    <input class="form__input" type="text" name="search" [(value)]="_searchTerm"
                         placeholder="Customber Name.." required="required" autocomplete="off"
                         (input)="onSearch($event)" />
                     <button class="form__button">
@@ -36,41 +36,42 @@
                                 <div class="payout__col">Customber Name</div>
                                 <div class="payout__col">Start Date</div>
                                 <div class="payout__col">End date</div>
-                                <div class="payout__col">Kilometres</div>
-                                <div class="payout__col">Mileage</div>
+                                <!-- <div class="payout__col">Kilometres</div> -->
+                                <!-- <div class="payout__col">Mileage</div> -->
                                 <div class="payout__col">Advance Payment</div>
                                 <div class="payout__col">Status</div>
                                 <div class="payout__col">Action</div>
                             </div>
                             @for (item of _displayedItems; track $index) {
                             <div class="payout__row">
-                                <div class="payout__col">{{item.customerName}}</div>
-                                <div class="payout__col">{{item.createdAt}}</div>
-                                <div class="payout__col">24/07/2024</div>
-                                <div class="payout__col">1240 km</div>
-                                <div class="payout__col">2352</div>
-                                <div class="payout__col">1000 /-</div>
-                                <div class="payout__col">Hold</div>
+                                <div class="payout__col">{{item.customerId.customerName}}</div>
+                                <div class="payout__col">{{item.start_date}}</div>
+                                <div class="payout__col">{{item.end_date}}</div>
+                                <!-- <div class="payout__col">{{item.kilometres}}</div> -->
+                                <!-- <div class="payout__col">{{item.mileage}}</div> -->
+                                <div class="payout__col">{{item.advance_payment}}</div>
+                                <div class="payout__col">{{item.status}}</div>
                                 <div class="payout__col">
-                                    <div class="actions" [class.active]="_actionsVisibility[$index]">
+                                    <!-- <div class="actions" [class.active]="_actionsVisibility[$index]">
                                         <button class="actions__button" (click)="toggleActionsVisibility($index)">
                                             <svg class="icon icon-more-horizontal">
                                                 <use xlink:href="#icon-more-horizontal"></use>
                                             </svg>
+                                        </button> -->
+                                    <div class="action-buttons">
+                                        <button class="actionsBtn" (click)="navigateToRoute(item)">
+                                            <svg class="icon icon-edit">
+                                                <use xlink:href="#icon-edit"></use>
+                                            </svg>
                                         </button>
-                                        <div class="actions__body">
-                                            <button class="actions__option" (click)="navigateToRoute(item)">
-                                                <svg class="icon icon-edit">
-                                                    <use xlink:href="#icon-edit"></use>
-                                                </svg>Edit Customer
-                                            </button>
-                                            <button class="actions__option" (click)="toggleDeleteDialog(item)">
-                                                <svg class="icon icon-trash">
-                                                    <use xlink:href="#icon-trash"></use>
-                                                </svg>Delete Customer
-                                            </button>
-                                        </div>
+                                        <button class="actionsBtn" (click)="toggleDeleteDialog(item)">
+                                            <svg class="icon icon-trash">
+                                                <use xlink:href="#icon-trash"></use>
+                                            </svg>
+                                        </button>
                                     </div>
+
+                                    <!-- </div> -->
                                 </div>
                             </div>
                             } @empty{
